<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_900">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/ri_poster"
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/detail_movie"
        android:padding="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_backdrop"
        app:layout_constraintVertical_bias="0"
        app:riv_corner_radius="10dp"
        tools:src="@drawable/ic_image" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="150dp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/ri_poster"
        tools:ignore="RtlSymmetry"
        tools:text="Record Of Ragnarok" />

    <TextView
        android:id="@+id/label_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:text="@string/release_date"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ri_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ri_poster"
        app:layout_constraintTop_toBottomOf="@+id/label_release"
        tools:ignore="SmallSp"
        tools:text="23 October 2021" />

    <TextView
        android:id="@+id/label_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:text="@string/popularity"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ri_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_release" />

    <TextView
        android:id="@+id/tv_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ri_poster"
        app:layout_constraintTop_toBottomOf="@+id/label_popularity"
        tools:ignore="SmallSp"
        tools:text="4958.137" />

    <TextView
        android:id="@+id/label_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:text="@string/rating"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ri_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_popularity" />

    <TextView
        android:id="@+id/tv_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="12sp"
        app:drawableStartCompat="@drawable/ic_star"
        app:layout_constraintStart_toEndOf="@+id/ri_poster"
        app:layout_constraintTop_toBottomOf="@+id/label_rate"
        tools:text=" 8.9" />

    <TextView
        android:id="@+id/label_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:text="@string/vote_count"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ri_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_rate" />

    <TextView
        android:id="@+id/tv_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ri_poster"
        app:layout_constraintTop_toBottomOf="@+id/label_vote"
        tools:ignore="SmallSp"
        tools:text="500" />

    <TextView
        android:id="@+id/label_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/overview"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ri_poster" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_overview"
        tools:text="Lorem ipsum" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/img_backdrop"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/backdrop"
        android:paddingBottom="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:riv_corner_radius="10dp"
        tools:src="@drawable/ic_image" />

    <TextView
        android:id="@+id/label_trailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="8dp"
        android:text="@string/trailer"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

    <WebView
        android:id="@+id/main_webview"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@color/gray_900"
        android:backgroundTint="@color/gray_900"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_trailer" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>